# ImplementacionAjedrez

./: .gitignore
template-alumnos/: CMakeLists.txt  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  ejercicios.h
template-alumnos/tests/: ej1_posicionValidaTEST.cpp  ej2_posicionInicialValidaTEST.cpp  ej3_casillasAtacadasTEST.cpp  ej4_posicionSiguienteCorrectaTEST.cpp  ej5_ordenarTableroTEST.cpp  ej6_finDeLaPartidaTEST.cpp  ej7_hayJaqueDescubiertoTEST.cpp  ej8_ejecutarSecuenciaForzadaTEST.cpp  ej9_seVieneElJaqueEnTEST.cpp
